--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -349,6 +349,7 @@ $margin-xxl: var(--spacing-xxl);
 /* stylelint-disable-next-line no-duplicate-selectors */
 :root {
   --header-height: 69px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
+  --search-size: 2.625rem; // This should be calculated from the scaling text and scaling spacing tokens instead of hardcoding in case they change
 
   @media (min-width: $breakpoint-md) {
     --header-height: 103px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
@@ -356,6 +357,7 @@ $margin-xxl: var(--spacing-xxl);
 
   @media (min-width: $breakpoint-xl) {
     --header-height: 115px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
+    --search-size: 2.875rem; // This should be calculated from the scaling text and scaling spacing tokens instead of hardcoding in case they change
   }
 }
 
@@ -385,6 +387,5 @@ $mobile-minimum-clickable-area: 44px;
 ////////////////////////
 /// Header Tokens
 ///
-$search-size: 2.625rem; // This should be calculated from the scaling text and scaling spacing tokens instead of hardcoding in case they change
-$search-size-xl: 2.875rem;
+$search-size: var(--search-size);
 $header-height: var(--header-height);
